--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wprun",
-  "version": "1.0.0",
+  "version": "0.0.1-alpha.01",
   "description": "",
   "main": "index.js",
   "bin": {
