--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "url": "https://github.com/PlayMa256/webpackx"
+  },
   "keywords": [],
   "files": [
     "bin",
@@ -16,7 +19,7 @@
     "webpack.config.js",
     "Readme.md"
   ],
-  "author": "",
+  "author": "PlayMa256<Matheus Gonçalves da Silva>",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.4.4",
