--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "webpackx": "bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lintstaged": "lint-staged"
   },
+  "precommit": ["lintstaged"],
   "repository": {
     "url": "https://github.com/PlayMa256/webpackx"
   },
@@ -29,5 +30,13 @@
     "webpack": "^4.31.0",
     "webpack-node-externals": "^1.7.2",
     "yargs-parser": "^13.1.0"
+  },
+  "devDependencies": {
+    "lint-staged": "^8.1.7",
+    "precommit": "^1.2.2",
+    "prettier": "^1.17.1"
+  },
+  "lint-staged": {
+    "*.js": "prettier"
   }
 }
