--- a/package.json
+++ b/package.json
@@ -19,18 +19,13 @@
   "files": [
     "bin",
     "package.json",
-    "webpack.config.js",
     "Readme.md"
   ],
   "author": "PlayMa256<Matheus Gonçalves da Silva>",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.4.4",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^2.0.2",
-    "shebang-loader": "0.0.1",
     "webpack": "^4.31.0",
-    "webpack-node-externals": "^1.7.2",
+    "webpackx-config": "0.0.1-alpha.1",
     "yargs-parser": "^13.1.0"
   },
   "devDependencies": {
